# replicator

./: .gitignore  Cargo.toml  README.md  artificial_pulse.py  hope.bat  hope.html  hope_registry.py  index.html  start.bat  sync_ui.html  voiceloop.py
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: hope_bench.rs
hope-os-desktop/: index.html  main.js  package.json  preload.js
src/: agent_main.rs  collective.rs  corn_kernel.rs  cortex.rs  crypto.rs  eku.rs  lib.rs  main.rs  merkle.rs  protocol.rs  security.rs  spine.rs  tui.rs  vm.rs
tests/: integration_crypto_pipeline.rs  integration_security_pipeline.rs  integration_spine.rs
